kubernetes/apps/base/media/media-ottawa/autobrr/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr:v1.88.0
        ports:
        - name: http
          containerPort: 7474
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: autobrr-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
spec:
  selector:
    app: autobrr
  ports:
  - name: http
    port: 7474
    protocol: TCP
    targetPort: 7474
