kubernetes/apps/base/media/media-ottawa/autobrr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
  annotations:
    item.homer.rajsingh.info/name: Autobrr
    item.homer.rajsingh.info/subtitle: Indexer Management
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/homarr-labs/dashboard-icons/refs/heads/main/svg/autobrr.svg
    item.homer.rajsingh.info/keywords: tv, series, automation
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
  - autobrr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: autobrr
      port: 7474
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
